--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -105,7 +105,7 @@ description</li>
 </ul>
 <h2 id="section-4"></h2>
 </div>
-<input type="checkbox" id="collapse-section6" checked aria-hidden="true">
+<input type="checkbox" id="collapse-section6" aria-hidden="true">
 <label for="collapse-section6" aria-hidden="true">V2.2.0 /
 07-Oct-2025</label>
 <div>
@@ -117,6 +117,17 @@ description</li>
 <li>Adding CODE_OF_CONDUCT.md and SECURITY.md</li>
 </ul>
 <h2 id="section-5"></h2>
+</div>
+<input type="checkbox" id="collapse-section7" checked aria-hidden="true">
+<label for="collapse-section7" aria-hidden="true">V2.2.1 /
+15-Jan-2026</label>
+<div>
+<h2 id="main-changes-6">Main changes</h2>
+<ul>
+<li>Change bit address representation for sensor-hub from 7 to 8
+bit</li>
+</ul>
+<h2 id="section-6"></h2>
 </div>
 </div>
 </section>
